<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_assets">Assets</string>
    <string name="menu_astronauts">Astronauts</string>
    <string name="menu_vehicles">Vehicles</string>

    <!-- Vehicle List Item -->
    <string name="vehicle_list_item_specs_button_label">Specs</string>

    <!-- Rocket Details -->
    <string name="rocket_details_success_rate_label">Launch Success Rate</string>
    <string name="rocket_details_first_flight_label">First Flight</string>
    <string name="rocket_details_stages_label">Stages</string>
    <string name="rocket_details_height_label">Height</string>
    <string name="rocket_details_diameter_label">Diameter</string>
    <string name="rocket_details_mass_label">Mass</string>
    <string name="rocket_details_thrust_at_liftoff_label">Thrust at Liftoff</string>
    <string name="rocket_details_mass_to_leo_label">Mass to LEO</string>
    <string name="rocket_details_mass_to_gto_label">Mass to GTO</string>

    <!-- Rocket Filter -->
    <string name="rocket_filter_family_label">Family:</string>
    <string name="rocket_filter_falcon_chip_label">Falcon</string>
    <string name="rocket_filter_starship_chip_label">Starship</string>
    <string name="rocket_filter_type_label">Type:</string>
    <string name="rocket_filter_falcon_1_chip_label">Falcon 1</string>
    <string name="rocket_filter_falcon_9_chip_label">Falcon 9</string>
    <string name="rocket_filter_falcon_heavy_chip_label">Falcon Heavy</string>
    <string name="rocket_filter_order_label">Order:</string>
    <string name="rocket_filter_ascending_chip_label">Ascending</string>
    <string name="rocket_filter_descending_chip_label">Descending</string>
    <string name="rocket_filter_reset_button_label">Reset</string>

    <!-- Second Stage Details -->
    <string name="second_stage_details_active_label">Active</string>
    <string name="second_stage_details_active">Yes</string>
    <string name="second_stage_details_inactive">No</string>
    <string name="second_stage_details_crew_capacity_label">Crew Capacity</string>
    <string name="second_stage_details_first_flight_label">First Flight</string>
    <string name="second_stage_details_height_label">Height</string>
    <string name="second_stage_details_diameter_label">Diameter</string>
    <string name="second_stage_details_payload_capacity_label">Payload Capacity</string>

    <!-- Core Details -->
    <string name="core_details_status_label">Status</string>
    <string name="core_details_flights_label">Flights</string>
    <string name="core_details_last_launch_label">Last Launch</string>
    <string name="core_details_first_launch_label">First Launch</string>

    <!-- Capsules -->
    <string name="capsule_details_status_label">Status</string>
    <string name="capsule_details_type_label">Type</string>

    <string name="measurement_meters">%1$s m</string>
    <string name="mass_tonne">%1$d T</string>
    <string name="mass_kg">%1$s kg</string>
    <string name="thrust_kn">%1$s kN</string>
    <string name="seconds_format">%1$d s</string>

</resources>